--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Tailwind Library -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/creativetimofficial/tailwind-starter-kit/compiled-tailwind.min.css" />
+    <!-- AOS.js -->
+<script defer src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script defer src="script.js"></script>
+<!-- Navigation Script -->
+<script defer src="navbar.js"></script>
 </head>
 <body class="text-gray-800 antialiased">
 
@@ -570,7 +575,7 @@
     <!-- Contact Form -->
     <section class="relative block py-24 lg:pt-0 bg-gray-900">
       <!-- Container -->
-      <div class="container mx-auto px-4" data-aos="fade-in" data-aos-delay="1200">
+      <div class="container mx-auto px-4" data-aos="fade-in" data-aos-delay="1100">
         <div class="flex flex-wrap justify-center lg:-mt-64 -mt-48">
           <div class="w-full lg:w-6/12 px-4">
             <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-gray-300">
@@ -741,9 +746,4 @@
   </footer>
   <!-- End of Footer Section -->
 </body>
-<!-- AOS.js -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="script.js"></script>
-<!-- Navigation Script -->
-<script src="navbar.js"></script>
 </html>
